	- The database backend to use is now obtained from the world.mt file by default
	- Additional geometrical figures can be drawn on the map
		Similar to the circles drawn for origin and players. Supported figures
		are: point, line, rectangle, ellipse (circle), text.
		Translucency (alpha) is supported, although for ellipses, it does not
		work as expected (due to a bug in libgd)

    Enhancements:
    	- Failure to process a command-line option now causes a specific error message.
		The generic help message is often not very helpful in such a case.
    	- The map origin color and Player colors can now be specified with an alpha value.
		Unfortunately, due to a bug in libgd, the effect is not what it should be...
	- The colors.txt file is now also searched for in the world's minetest directory
		(the directory containing minetest.conf) - if it can be found.
	- C++11 compilation is enabled if supported. If so, faster datastructures are used.
		instead of regular map, unordered_map is used where applicable
	- Colors used with drawalpha can now differ from colors used without drawalpha.
		Colors.txt can now have 'duplicate' entries for nodes, depending on whether alpha
		transparency is on or off.
		With 'drawalpha', a non-opaque color entry (with alpha less than 255) is
		preferred, whereas without 'drawalpha', a color entry with alpha 255
		(or unspecified alpha) is preferred.
		In all other cases, later entries override former entries in the colors file.
		The color of water with drawalpha was changed a little.
	- The sqlite3 backend is now optional and can be disabled during compilation.
	- Failures parsing or decompressing the block data from the database are now caught and reported.
		Map generation continues, and aborts only after 100 or more errors.
		The error messages for decompression failures were also improved.
	- Geometry can now also be specified using 2 corners of the area (instead of corner and dimensions)